[package]
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2024"
name = "bunner-macroquad"
version = "0.6.0"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
quad-snd = "0.2.5"

[profile.dev]
debug = 1 # less precise locations

# Doesn't work with android build
[profile.dev.package.'*']
debug = false # no debug symbols for deps
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
